# fastapi-ecommerce

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
app/: config.py  database.py  main.py
app/models/: __init__.py  customer.py  order.py  order_item.py  product.py  review.py  user.py
app/routers/: __init__.py  customers.py  order_items.py  orders.py  products.py  reviews.py  users.py
app/schemas/: __init__.py  customer.py  order.py  order_item.py  product.py  review.py  user.py
app/services/: auth.py  payment.py
app/utils/: __init__.py  dependencies.py
tests/: test_app.py  test_customers.py  test_db_health.py  test_order_items.py  test_orders.py  test_products.py  test_reviews.py
